myMusic freaking works
